1999-11-01  Federico Mena Quintero  <federico@redhat.com>

	* src/gnome-canvas-pixbuf.c (recompute_bounding_box): Fixed
	bounding box computation.

1999-11-01  Federico Mena Quintero  <federico@redhat.com>

	* src/gnome-canvas-pixbuf.c: Start of the pixbuf canvas item.
	Drawing affines seem to work.  Bounding box is fubared.  ::point()
	is not implemented.  This is a work in progress.

	* src/Makefile.am: Added gnome-canvas-pixbuf.[ch] to the list of
	sources.

	* configure.in: Sigh.  We need to link in libgnomeui for the
	canvas stuff.  This mess will disappear when gdk-pixbuf gets
	folded into gnome-libs.

1999-10-30  Jonathan Blandford  <jrb@redhat.com>

	* src/io-gif.c: Some more work.  Now it generates a gdk_pixbuf of
	the right size, at a minimum, even if the image is squished and
	the wrong color.
	(ReadImage): lets get the offset right.  This will let transparent
	gifs work.

1999-10-28  Jonathan Blandford  <jrb@redhat.com>

	* src/gdk-pixbuf-loader.c (gdk_pixbuf_loader_write): don't send a
	0 length buffer.

1999-10-29  Michael Fulbright  <drmike@redhat.com>

	* src/gdk-pixbuf-loader.c (gdk_pixbuf_loader_write): Actually
	load the image handler when we determine the image type.

	* src/gdk-pixbuf-io.[ch] (gdk_pixbuf_load_module): Changed the
	previously static function load_image_handler () to
	a public function gdk_pixbuf_load_module (). It is needed in
	gdk-pixbuf-loader.c to load image handler modules.  This function
	is different from gdk_pixbuf_get_module (), which only returns
	a reference to the required handler, because it actually loads
	the handler into memory. Both actions should possibly be combined
	in a convenience function since one w/o the other doesn't seem to
	make much sense.

1999-10-28  Federico Mena Quintero  <federico@redhat.com>

	* src/gdk-pixbuf-render.c (gdk_pixbuf_render_to_drawable): New
	function to render a portion of a pixbuf to a drawable.  Ignores
	alpha information and takes in a GC.